--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <version>4.13</version>
         </dependency>
     </dependencies>
 
